# AKNN

./: .gitignore  README.md
Report/: main.tex  references.bib
Report/data/: 1_avx.csv  1_diff_struct.csv  1_gist_qps_acc.csv  1_mmap.csv  1_sift_qps_acc.csv  1_sift_r_acc.csv  2.csv  3.csv
base/: CMakeLists.txt  README.md  main.cpp
data/: Filelist.txt
demos/: CMakeLists.txt  README.md  base.cpp  test_heap.cpp  test_mmap.cpp  test_mq1.cpp  test_mq2.cpp  test_mq3.cpp  test_opq.cpp
gen_knn/: CMakeLists.txt  README.md  gen_knn.cpp
gen_mbase/: CMakeLists.txt  README.md  gen_mbase.cpp
gist/: Filelist.txt  searchRes.ives
include/: AKNN_EX.cpp  AKNN_EX.h  AKNN_IO.cpp  AKNN_IO.h  VectorTransform.cpp  VectorTransform.h  _xfOPQMatrix.cpp  _xfOPQMatrix.h  aknn.cpp  aknn.h  fixed_heap.hpp  mIndex.cpp  mIndex.h  mIndexG.cpp  mIndexG.h  mIndexHeap.cpp  mIndexHeap.h  mIndexMQ.cpp  mIndexMQ.h  mIndexPQ.cpp  mIndexPQ.h  pq.h  util.h
sift/: Filelist.txt  searchRes.ives
src/: aknn.cpp  aknn.h  fixed_min_heap.hpp  main.cpp
test_heap/: README.md  aknn_test.cpp  aknn_test.h  test_heap.cpp
test_mmap/: CMakeLists.txt  README.md  aknn_test.cpp  aknn_test.h  test_mmap.cpp
test_new/: CMakeLists.txt  README.md  aknn_test.cpp  aknn_test.h  logb.txt  test_new.cpp
test_opq/: CMakeLists.txt  README.md  aknn_test.cpp  aknn_test.h  main.cpp  test_opq.cpp  train.cpp
test_structure/: README.md  aknn.cpp  aknn_test.cpp  aknn_test.h  main.cpp  test_structure.cpp
